# 170422824_Semih_Semerci_PPE-Detection

./: README.md
final-raporu/: Bitirme_Projesi_Final_Raporu.docx
ppe/: .gitignore  CMakeLists.txt  Info.plist  main.cpp
ppe-backend/: .env  .gitignore  CMakeLists.txt  package-lock.json  package.json
ppe-backend/ppe-bridge/: ppe_bridge.js
ppe-backend/src/: server.js
ppe-backend/src/controllers/: adminController.js  authController.js  ppeController.js  uploadController.js
ppe-backend/src/cpp-bridge/: cppBridge.js  cppBridge.txt  ppe_bridge.cpp
ppe-backend/src/middleware/: fileUpload.js  upload.js
ppe-backend/src/models/: database.js
ppe-backend/src/routes/: adminRoutes.js  authRoutes.js  ppeRoutes.js  pperoutes.txt  uploadRoutes.js
ppe-backend/src/services/: auth.js  ppeService.js
ppe-backend/src/utils/: createAdmin.js  initDb.js
ppe-frontend/: .env  .gitignore  App.vue  Dockerfile  main.js  package-lock.json  package.json  vite.config.js
ppe-frontend/public/: index.html
ppe-frontend/src/: App.vue  main.js
ppe-frontend/src/api/: api.js  api.txt  auth.js  ppe.txt
ppe-frontend/src/assets/styles/: global.css
ppe-frontend/src/components/: CameraStream.vue  DetectionResult.jsx  PPEDetection.vue  camerastream.txt
ppe-frontend/src/router/: index.js
ppe-frontend/src/stores/: auth.js  monitoring.js
ppe-frontend/src/views/: DashboardView.vue  LoginView.vue  MainView.vue  MonitoringView.vue  SettingsView.vue  ViolationView.vue  WorkerListView.vue  WorkersView.vue  mainview.txt
ppe-frontend/utils/: api.js
ppe/cpp_infer/: CMakeLists.txt  CMakeLists.txt.backup
ppe/cpp_infer/include/: paddleocr.h
ppe/cpp_infer/src/: paddleocr.cpp  utility.cpp
ppe/db/include/: db.h
ppe/db/src/: db.cpp
ppe/include/: ITracker.h  TrackerFactory.h  inference.h
ppe/include/BYTETracker/: BTSTrack.h  BTdataType.h  BTlapjv.h  BYTETracker.h  BytekalmanFilterr.h  DSdataType.h
ppe/include/Centroid/: centroidtracker.h
ppe/include/DeepSort/: DSFeatureTensor.h  DShungarianoper.h  DSkalmanfilter.h  DSlinear_assignment.h  DSmatrix.h  DSmodel.h  DSmunkerr.h  DSnn_matching.h  DStrack.h  DStracker.h
ppe/include/OCSort/: OCAssociation.h  OCKalmanBoxTracker.h  OCKalmanFilter.h  OCSort.h  OCUtilities.h  OClapjv.h
ppe/include/Sort/: SHungarian.h  SKalmanTracker.h
ppe/model/include/: crop.h  detection.h  id_card.h  mail.h  person.h  progressbar.h
ppe/model/src/: crop.cpp  detection.cpp  mail.cpp  person.cpp  progressbar.cpp
ppe/ocr_model/: ppocr
ppe/src/BYTETracker/: BTSTrack.cpp  BTlapjv.cpp  BTutils.cpp  BYTETracker.cpp  BytekalmanFilterr.cpp
ppe/src/Centroid/: centroidtracker.cpp
ppe/src/DeepSort/: DSFeatureTensor.cpp  DShungarianoper.cpp  DSkalmanfilter.cpp  DSlinear_assignment.cpp  DSmodel.cpp  DSmunkerr.cpp  DSnn_matching.cpp  DStrack.cpp  DStracker.cpp
ppe/src/OCSort/: OCAssociation.cpp  OCKalmanBoxTracker.cpp  OCKalmanFilter.cpp  OCUtilities.cpp  OClapjv.cpp
ppe/src/Sort/: SHungarian.cpp  SKalmanTracker.cpp
ppe/ui/pages/include/: loginPage.h  mainPage.h  settings.h  violation.h  workerList.h
ppe/ui/pages/src/: loginPage.cpp  mainPage.cpp  settings.cpp  violation.cpp  workerList.cpp
sunum/: Bitirme_Projesi_Sunum.pptx  ~$Bitirme_Projesi_Sunum.pptx
